pizza/pizza-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pizza
  template:
    metadata:
      labels:
        app: pizza
    spec:
      containers:
      - name: pizza
        image: nanodeus/pizza-image
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pizzas-service
spec:
  selector:
    app: pizza
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
