pizza/tacos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tacos-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tacos
  template:
    metadata:
      labels:
        app: tacos
    spec:
      containers:
      - name: tacos
        image: nanodeus/tacos-image
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tacos-service
spec:
  selector:
    app: tacos
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
