pizza/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: burgerandtacos.eatsout.com
    http:
      paths:
      - path: /tacos
        pathType: Prefix
        backend:
          service:
            name: tacos-service
            port:
              name: http
      - path: /burgers
        pathType: Prefix
        backend:
          service:
            name: burgers-service
            port:
              name: http
  - host: mypizza.eatsout.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pizzas-service
            port:
              name: http
